--- a/app/views/non_ski_activities/show.html.erb
+++ b/app/views/non_ski_activities/show.html.erb
@@ -5,5 +5,9 @@
 </div>
 
   <!-- Show Page Customization starts -->
-
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "non_ski_activities/non_ski_activity_non_ski_reviews" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
