--- a/app/views/ski_areas/show.html.erb
+++ b/app/views/ski_areas/show.html.erb
@@ -5,5 +5,21 @@
 </div>
 
   <!-- Show Page Customization starts -->
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "ski_areas/ski_area_ski_check_ins" %>
+  </div>
+</div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "ski_areas/ski_area_ski_area_reviews" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "ski_areas/ski_area_non_ski_activities" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
