--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,33 @@
 </div>
 
   <!-- Show Page Customization starts -->
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_friends_sent" %>
+  </div>
+</div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_friends_received" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_ski_check_ins" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_non_ski_reviews" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_ski_area_reviews" %>
+  </div>
+</div>
   <!-- Show Page Customization end -->
