Add forms for new collection objects on show pages

--- a/app/views/non_ski_activities/_non_ski_activity_non_ski_reviews.html.erb
+++ b/app/views/non_ski_activities/_non_ski_activity_non_ski_reviews.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="non_ski_activity_non_ski_reviews_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "non_ski_activities/non_ski_activity_non_ski_reviews_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
