--- a/app/views/ski_areas/_ski_area_non_ski_activities.html.erb
+++ b/app/views/ski_areas/_ski_area_non_ski_activities.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="ski_area_non_ski_activities_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "ski_areas/ski_area_non_ski_activities_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
