--- a/app/views/users/_user_ski_check_ins.html.erb
+++ b/app/views/users/_user_ski_check_ins.html.erb
@@ -20,7 +20,7 @@
     <div class="card-footer">
       <div class="collapse" id="user_ski_check_ins_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "users/user_ski_check_ins_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
