--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -2,30 +2,9 @@
 
 <%= form_with(model: friend, local: true, novalidate: true, class: "mb-3") do |f| %>
   <!-- Label and input for friend_sender_id start -->
-  <div class="form-group">
-    <% friend_sender_class = "form-control" %>
-    <% friend_sender_was_invalid = friend.errors.include?(:friend_sender) %>
-
-    <% if was_validated %>
-      <% if friend_sender_was_invalid %>
-        <% friend_sender_class << " is-invalid" %>
-      <% else %>
-        <% friend_sender_class << " is-valid" %>
-      <% end %>
-    <% end %>
-
-    <%= f.label :friend_sender_id %>
-    <!-- Input for friend_sender_id start -->
-    <%= f.collection_select :friend_sender_id, User.all, :id, :to_s, {}, class: "form-control" %>
-    <!-- Input for friend_sender_id end -->
-    <% if friend_sender_was_invalid %>
-      <% friend.errors.full_messages_for(:friend_sender).each do |message| %>
-        <div class="invalid-feedback d-flex">
-          <%= message %>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
+  <!-- Input for "friend_sender_id" start -->
+  <%= f.hidden_field :friend_sender_id, value: current_user.id %>
+  <!-- Input for "friend_sender_id" end -->
   <!-- Label and input for friend_sender_id end -->
   <!-- Label and input for friend_recipient_id start -->
   <div class="form-group">
