--- a/app/views/users/_user_ski_check_ins_new_form.html.erb
+++ b/app/views/users/_user_ski_check_ins_new_form.html.erb
@@ -13,7 +13,7 @@
     <%= f.label :ski_area_id %>
 
     <!-- Input for ski_area_id start -->
-    <%= f.text_field :ski_area_id, class: "form-control" %>
+    <%= f.collection_select :ski_area_id, SkiArea.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for ski_area_id end -->
   </div>
   <!-- Label and input for ski_area_id end -->
