--- a/app/views/ski_area_reviews/index.html.erb
+++ b/app/views/ski_area_reviews/index.html.erb
@@ -34,6 +34,10 @@
       <div class="list-group list-group-flush">
         <%= render collection: @ski_area_reviews, partial: "list_item", as: :ski_area_review %>
       </div>
+      <div class="card-footer d-flex justify-content-center">
+        <%= paginate @ski_area_reviews, theme: 'twitter-bootstrap-4' %>
+      </div>
+
     </div>
   </div>
 </div>
