--- a/app/views/ski_area_reviews/_card.html.erb
+++ b/app/views/ski_area_reviews/_card.html.erb
@@ -7,12 +7,20 @@
     <dl class="mb-1">
       <dt>User</dt>
       <!-- Display user_id start -->
-      <dd><%= ski_area_review.user_id %></dd>
+      <dd>
+        <% if @ski_area_review.user.present? %>
+          <%= link_to ski_area_review.user, ski_area_review.user %>
+        <% end %>
+      </dd>
       <!-- Display user_id end -->
 
       <dt>Ski area</dt>
       <!-- Display ski_area_id start -->
-      <dd><%= ski_area_review.ski_area_id %></dd>
+      <dd>
+        <% if @ski_area_review.ski_area.present? %>
+          <%= link_to ski_area_review.ski_area, ski_area_review.ski_area %>
+        <% end %>
+      </dd>
       <!-- Display ski_area_id end -->
 
       <dt>Review</dt>
