--- a/app/views/ski_areas/index.html.erb
+++ b/app/views/ski_areas/index.html.erb
@@ -11,7 +11,11 @@
 </div>
 
   <!-- Ransack Code start -->
-
+<div class="row">
+  <div class="col-md-12 mb-3">
+    <%= render partial: "ski_areas/ski_areas_search_form" %>
+  </div>
+</div>
   <!-- Ransack Code end -->
 
   <!-- Location Map Code start -->
